--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cron": "^1.7.3",
     "apollo-server-express": "^3.5.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.1",
+    "cron": "^1.8.2",
+    "cron-schedule": "^3.0.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "shelljs": "^0.8.4",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.40"
   },
@@ -28,6 +34,9 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.7",
+    "@types/node-cron": "^3.0.0",
+    "@types/nodemailer": "^6.4.4",
+    "@types/shelljs": "^0.8.9",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
