--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ JWT_SECRET=Secret
 
 JWTADMIN_SECRET= SecretAdmin
 
-E_MAIL_USERNAME = macarenagalindo21@gmail.com
-E_MAIL_PASSWORD= galindo21
+E_MAIL_USERNAME = macarenagalindo21@outlook.com
+E_MAIL_PASSWORD = galindo21
+
+RECEIVER_E_MAIL_USERNAME = macarenagalindo21@gmail.com
+RECEIVER_E_MAIL_PASSWORD= galindo21
 E_MAIL 
